kong-ingress-controller-handson/manifests/task-service/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: task-service
  name: task-service
  namespace: kic-dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app: task-service
  strategy: {}
  template:
    metadata:
      labels:
        app: task-service
    spec:
      containers:
        - image: nmthai/sample-task-service:latest
          imagePullPolicy: Always
          name: task-service
          ports:
            - containerPort: 8080
          resources: {}
